<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_name" />

        <EditText
            android:id="@+id/edit_habit_name"
            style="@style/EditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_duration" />

        <EditText
            android:id="@+id/edit_habit_duration"
            style="@style/EditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_duration"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_frequency" />

        <Spinner
            android:id="@+id/spinner_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

    </LinearLayout>

</LinearLayout>